--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,12 +1,22 @@
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700&display=swap');
+
+:root {
+  --background-color: black;
+  --foreground-color: white;
+  --secondary-color: rgb(80, 80, 80);
+  --tertiary-color: rgb(196, 196, 196);
+  --card-width: 600px;
+}
+
 html,
 body {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: 'Inconsolata', monospace;
   scroll-behavior: smooth;
-  background-color: rgba(0, 0, 0);
-  color: white;
+  background-color: var(--background-color);
+  color: var(--foreground-color);
   margin: 0;
   padding: 0;
+  text-align: center;
 }
 
 #header-bg {
@@ -16,7 +26,6 @@ body {
   object-fit: cover;
   background-size: cover;
   background-position: center;
-
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -34,47 +43,38 @@ body {
   padding: 2em;
 }
 
-#header-mini {
-  top: 0;
-  display: none;
-  position: sticky;
-  align-items: center;
-  justify-content: center;
-  opacity: 0;
-  gap: 2rem;
-  padding: 1rem;
-  background-color: rgb(80, 80, 80);
-  box-shadow: 0px 2px 2px 1px rgba(0, 0, 0, 0.2);
-  transition: 500ms;
-  z-index: 10;
-}
-
-#header-mini.show {
-  display: flex;
-  opacity: 1;
-}
-
 #header-bg > #arrow-down {
   cursor: pointer;
 }
 
-#header-bg > h1 {
+#header-text > h1 {
+  padding: 0 2em 0 2em;
   font-weight: 700;
   font-size: 64px;
   text-align: center;
-  color: white;
 }
 
-#header-bg > h2 {
+#header-text > h2 {
+  padding: 0 2em 0 2em;
   font-weight: 200;
   font-size: 32px;
   text-align: center;
-  color: white;
 }
 
 main {
   display: flex;
   flex-direction: row-reverse;
+  justify-content: center;
+}
+
+#sections {
+  flex-grow: 9;
+}
+
+section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 section > h2 {
@@ -100,26 +100,22 @@ section > h2 {
 }
 
 .card {
+  width: var(--card-width);
   display: flex;
   flex-direction: column;
-  max-width: 80vw;
   align-items: center;
-  padding: 2vw;
+  padding: 1.5em;
   margin: 0.5em;
   border-radius: 1em;
-  background-color: rgb(80, 80, 80);
+  background-color: var(--secondary-color);
 }
 
 .img-card {
   width: 100%;
-  height: 50vh;
+  height: 30vh;
   object-fit: cover;
   object-position: center;
   border-radius: 0.5em;
-}
-
-.scroll {
-  scroll-margin-top: 10vh;
 }
 
 .under-header {
@@ -127,7 +123,7 @@ section > h2 {
 }
 
 aside {
-  top: 10vh;
+  top: 0;
   height: fit-content;
   position: sticky;
   display: flex;
@@ -135,7 +131,7 @@ aside {
   align-items: flex-start;
   justify-items: start;
   background-color: transparent;
-  color: white;
+  color: var(--foreground-color);
   padding: 2rem 1rem 1rem 1rem;
 }
 
@@ -146,21 +142,22 @@ aside > div > p {
   margin-inline-end: 0px;
 }
 
-a {
-  color: white;
+p {
+  line-height: 1.5em;
 }
 
 #buttons {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
 }
 
 .button {
-  background-color: rgb(196, 196, 196);
+  background-color: var(--tertiary-color);
   display: flex;
   align-items: center;
   gap: 1em;
-  color: black;
+  color: var(--background-color);
   padding: 1em;
   margin: 1em;
   border-radius: 1em;
@@ -169,7 +166,7 @@ a {
 }
 
 .button:hover {
-  background-color: white;
+  background-color: var(--foreground-color);
 }
 
 .button-transparent {
@@ -177,17 +174,18 @@ a {
   display: flex;
   align-items: center;
   gap: 1em;
-  color: white;
+  color: var(--foreground-color);
   padding: 1em;
   margin: 1em;
   border-radius: 1em;
   cursor: pointer;
   transition: 500ms;
+  text-align: start;
 }
 
 .button-transparent:hover {
-  background-color: white;
-  color: black;
+  background-color: var(--foreground-color);
+  color: var(--background-color);
 }
 
 footer {
@@ -197,8 +195,8 @@ footer {
   margin-top: 1em;
   padding: 1em;
   gap: 0.5em;
-  color: white;
-  background-color: rgb(80, 80, 80);
+  color: var(--foreground-color);
+  background-color: var(--secondary-color);
 }
 
 footer > img {
@@ -216,13 +214,23 @@ footer > img {
 }
 
 @media (max-width: 970px) {
+  #header-text > h1 {
+    font-size: 48px;
+  }
+  
+  #header-text > h2 {
+    font-size: 24px;
+  }
+
   main {
     flex-direction: column;
     padding-left: unset;
+    align-items: center;
   }
+
   aside {
     flex-direction: row;
-    background-color: black;
+    background-color: var(--background-color);
     padding: unset;
     overflow: scroll;
     width: 100%;
@@ -257,7 +265,13 @@ footer > img {
     display: none;
   }
 
+  .scroll {
+    scroll-margin-top: 10vh;
+  }
+}
+
+@media (max-width: 670px) {
   .card {
-    max-width: unset;
+    width: 90vw;
   }
 }
